# dec2bin

./: CMakeLists.txt  LICENSE  README.md  dec2bin.cpp
.github/workflows/: cmake.yml
